# Terment

./: .env.example  .gitignore  README.md  config.yaml.example  main.py  pyproject.toml
src/terment/: chatbot.py  cli.py  config_manager.py  main.py  providers.py
