[project]
name = "terment"
version = "0.1.1"
description = "simple terminal agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=2.44.0",
    "prompt-toolkit>=3.0.52",
    "rich>=15.0.0",
    "ruff>=0.15.21",
]
[project.scripts]
terment = "terment.main:main"

[tool.uv]
package = true
